--- a/QuestionBank.SQLStorageImpl/TODO.txt
+++ b/QuestionBank.SQLStorageImpl/TODO.txt
@@ -1,1 +1,3 @@
-﻿Add-Migration InitialCreate
+﻿https://docs.microsoft.com/en-us/ef/core/managing-schemas/migrations/?tabs=vs
+
+Add-Migration InitialCreate
